<resources>
    <string name="app_name">Money365</string>
    <string name="title_activity_user_login">UserLogin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_account">New Account</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="refer_code_optional">Refer code (Optional)</string>
    <string name="email_address">Email Address</string>
    <string name="already_registered">Already registered? Login Here</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="refer_code">Refer Code</string>
    <string name="balance">Balance</string>
    <string name="daily_task">Daily Task</string>


    <string name="refer_note">আপনার বন্ধুদেরকে রেফার করুন। প্রতি রেফারের জন্য পাবেন ৫ টাকা করে।</string>
    <string name="withdraw_note">সঠিক নিয়ম মেনে কাজ করুন আর টাকা তুলুন নিশ্চিন্তে !!!</string>
    <string name="country_warning">Task is only available in US or Canada server</string>
    <string name="free_support_24_7">Free Support (10am - 9pm)</string>
    <string name="telegram"><a href="https://t.me/+a5an0Ui9z88zZDY9">আমাদের সাথে Telegram - এ যুক্ত হন।</a></string>
    <string name="mail"><a href="mailto:mazed.helloboss@gmail.com">আমাদেরকে mail করুন।</a></string>
    <string name="whatsapp"><a href="https://chat.whatsapp.com/LV164EqgRGj6FPo7j8Zs29">আমাদের সাথে Whatsapp - এ যুক্ত হন।</a></string>
    <string name="facebook"><a href="https://m.me/j/AbaezHyPgAWZ2z03/">আমাদের সাথে Facebook - এ যুক্ত হন।</a></string>
    <string name="create_an_account">Create an account</string>
    <string name="login">Login</string>
    <string name="we_will_send_you_an_otp_on_you">We will send you an OTP to your email.</string>
    <string name="you_will_get_an_otp_via_email">You will get an OTP via email.</string>
    <string name="password_must_be_at_least_6_character">Password must be at least 6 character.</string>

    //admob
    <string name="admob_ads_id">ca-app-pub-5769314088355366~5608949434</string>
    <string name="admob_ins_ads1">ca-app-pub-5769314088355366/1000185238</string>
    <string name="admob_red_ads1">ca-app-pub-5769314088355366/5677796848</string>

    //admob banner ads
    <string name="admob_banner1">ca-app-pub-5769314088355366/9461129180</string>
    <string name="admob_banner2">ca-app-pub-5769314088355366/3585151827</string>
    <string name="admob_banner3">ca-app-pub-5769314088355366/8503819478</string>

    <string name="testAds">ca-app-pub-3940256099942544/1033173712</string>

    //FB ads
    <string name="fb_ins_ads1">3258418574477730_3258568021129452</string>
    <string name="fb_red_ads1">3258418574477730_3258568577796063</string>

    <string name="fb_all_ins_ads1">3258418574477730_3272397546413166</string>

    //Unity
    <string name="unity_game_id">4897728</string>
    <string name="unity_interstitial">Interstitial_Android</string>
    <string name="unity_rewarded">Rewarded_Android</string>


    <string name="q1">বাংলাদেশের রাজধানী কোনটি?</string>
    <string name="q1a">ঢাকা</string>
    <string name="q1b">রংপুর</string>

    <string name="q2">বাংলাদেশ কত সালে স্বাধীন হয়?</string>
    <string name="q2a">১৯৫২</string>
    <string name="q2b">১৯৭১</string>

    <string name="q3">বাংলাদেশের জাতীয় ফল কোনটি?</string>
    <string name="q3a">আম</string>
    <string name="q3b">কাঁঠাল</string>

    <string name="q4">আমাদের জাতীয় পতেকার রং কি?</string>
    <string name="q4a">লাল ও সবুজ</string>
    <string name="q4b">লাল ও নীল</string>

    <string name="q5">বাংলাদেশের জাতীয় মাছ কোনটি?</string>
    <string name="q5a">রুই</string>
    <string name="q5b">ইলিশ</string>

    <string name="q6">বাংলাদেশের জাতীয় ফুল কোনটি?</string>
    <string name="q6a">জবা</string>
    <string name="q6b">শাপলা</string>

    <string name="q7">আমাদের রাষ্ট্রভাষা কি?</string>
    <string name="q7a">বাংলা</string>
    <string name="q7b">ইংরেজি</string>

    <string name="q8">১৬-ই ডিসেম্বর কি?</string>
    <string name="q8a">বিজয় দিবস</string>
    <string name="q8b">স্বাধীনতা দিবস</string>

    <string name="q9">বাংলাদেশে কয়টি জেলা?</string>
    <string name="q9a">৬৪</string>
    <string name="q9b">৬৮</string>

    <string name="q10">বাংলাদেশের জাতীয় গাছ কি?</string>
    <string name="q10a">আম গাছ</string>
    <string name="q10b">কাঁঠাল গাছ</string>

    <string name="q11">বাংলাদেশের জাতীয় পাখি কোনটি?</string>
    <string name="q11a">টিয়া</string>
    <string name="q11b">দোয়েল</string>

</resources>