<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".UserRegistration">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/new_account"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/reg_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/full_name"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#BF000000"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/email_address"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#BF000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/reg_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/phone_number"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textColorHint="#BF000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#BF000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#BF000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/reg_refer_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/refer_code_optional"
            
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#BF000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_round"
            android:gravity="center"
            android:onClick="user_register"
            android:padding="8dp"
            android:text="Register"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:onClick="already_registered"
            android:text="@string/already_registered"
            android:textAllCaps="false"
            android:textColor="#064AF6"
            android:textSize="15sp" />

        <ProgressBar
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:outlineAmbientShadowColor="@color/white"
            android:outlineSpotShadowColor="#0000FF"
            />
    </LinearLayout>

</RelativeLayout>