<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_all"
    android:layout_height="match_parent"
    tools:context=".Contact">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_color"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/free_support_24_7"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:columnCount="1"
            android:rowCount="3"
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <androidx.cardview.widget.CardView
                android:onClick="send_mail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:elevation="8dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:background="@drawable/email"
                        android:layout_marginLeft="10dp"
                        android:layout_width="55dp"
                        android:layout_height="55dp"/>

                    <TextView
                        android:id="@+id/c_email"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="15dp"
                        android:text="@string/mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:onClick="join_telegram"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:elevation="8dp"
                app:cardBackgroundColor="@color/white"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:background="@drawable/telegram"
                        android:layout_marginLeft="10dp"
                        android:layout_width="55dp"
                        android:layout_height="55dp"/>

                    <TextView
                        android:id="@+id/c_telegram"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="15dp"
                        android:text="@string/telegram"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:onClick="call_now"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:elevation="8dp"
                app:cardBackgroundColor="@color/white"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="8dp">


                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:background="@drawable/whatsapp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="55dp"
                        android:layout_height="55dp"/>

                    <TextView
                        android:id="@+id/c_phone"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="15dp"
                        android:text="@string/whatsapp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:onClick="join_facebook"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:elevation="8dp"
                app:cardBackgroundColor="@color/white"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="8dp">


                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:background="@drawable/facebook"
                        android:layout_marginLeft="10dp"
                        android:layout_width="55dp"
                        android:layout_height="55dp"/>

                    <TextView
                        android:id="@+id/c_facebook"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="15dp"
                        android:text="@string/facebook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

        <com.startapp.sdk.ads.banner.Banner
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>